--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,11 @@
 {
-  "java.project.sourcePaths": ["src"]
+  "java.project.sourcePaths": ["src"],
+  "java.project.outputPath": "bin",
+  "java.project.referencedLibraries": [
+    "lib/**/*.jar"
+  ],
+  "java.configuration.updateBuildConfiguration": "automatic",
+  "java.compile.nullAnalysis.mode": "automatic",
+  "java.project.defaultOutputPath": "bin",
+  "java.project.sourcePath": "src"
 }
