--- a/settings.json
+++ b/settings.json
@@ -2,10 +2,14 @@
   "java.project.sourcePaths": ["src"],
   "java.project.outputPath": "bin",
   "java.project.referencedLibraries": [
-    "lib/**/*.jar"
+    "lib/**/*.jar",
+    "lib/core.jar",
+    "lib/controlP5.jar"
   ],
   "java.configuration.updateBuildConfiguration": "automatic",
   "java.compile.nullAnalysis.mode": "automatic",
   "java.project.defaultOutputPath": "bin",
   "java.project.sourcePath": "src"
+
+
 }
