--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "City",
+            "request": "launch",
+            "mainClass": "main.java.code.City",
+            "projectName": "AP_CS_Final"
+        },
+        {
+            "type": "java",
             "name": "MySketch1",
             "request": "launch",
             "mainClass": "main.java.code.MySketch1",
